@@ -37,47 +37,23 @@ IF(LCMS_INCLUDE_DIR)
   INCLUDE_DIRECTORIES( ${LCMS_INCLUDE_DIR} )
 ENDIF(LCMS_INCLUDE_DIR)
 
-# Build the static library
+# Build the library
 IF(WIN32)
-  ADD_DEFINITIONS(-DOPJ_STATIC)
+  IF(BUILD_SHARED_LIBS)
+    ADD_DEFINITIONS(-DOPJ_EXPORTS)
+  ELSE(BUILD_SHARED_LIBS)
+    ADD_DEFINITIONS(-DOPJ_STATIC)
+  ENDIF(BUILD_SHARED_LIBS)
 ENDIF(WIN32)
-ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}_JPWL.static STATIC ${JPWL_SRCS} ${OPJ_SRCS})
-SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}_JPWL.static PROPERTIES OUTPUT_NAME ${OPENJPEG_LIBRARY_NAME}_JPWL)
-SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}_JPWL.static PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
+ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}_JPWL ${JPWL_SRCS} ${OPJ_SRCS})
+SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}_JPWL PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
 IF(LCMS_LIB)
-  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}_JPWL.static ${LCMS_LIB})
+  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}_JPWL ${LCMS_LIB})
 ENDIF(LCMS_LIB)
 # Install library
-INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}_JPWL.static
+INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}_JPWL
   DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
 )
-
-# If BUILD_SHARED_LIBS is ON, also build the shared library
-IF(BUILD_SHARED_LIBS)
-  # replace flag for static build with flag for shared build
-  IF(WIN32)
-    REMOVE_DEFINITIONS(-DOPJ_STATIC)
-    ADD_DEFINITIONS(-DOPJ_EXPORTS)
-  ENDIF(WIN32)
-  # Create the shared library
-  ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}_JPWL.shared SHARED ${JPWL_SRCS} ${OPJ_SRCS})
-  SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}_JPWL.shared PROPERTIES OUTPUT_NAME ${OPENJPEG_LIBRARY_NAME}_JPWL)
-  SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}_JPWL.shared PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
-  IF(LCMS_LIB)
-    TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}_JPWL.shared ${LCMS_LIB})
-  ENDIF(LCMS_LIB)
-  # Install library
-  INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}_JPWL.shared
-    DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
-  )
-  IF(WIN32)
-    REMOVE_DEFINITIONS(-DOPJ_EXPORTS)
-  ENDIF(WIN32)
-ENDIF(BUILD_SHARED_LIBS)
-
-# Do the proper thing when building static...if only there was configured
-# headers or def files instead
-ADD_DEFINITIONS(-DOPJ_STATIC)
 
 INCLUDE_DIRECTORIES(
   ${OPENJPEG_SOURCE_DIR}/libopenjpeg
@@ -96,7 +72,7 @@ ADD_EXECUTABLE(JPWL_j2k_to_image
 ../codec/index.c
 ../codec/j2k_to_image.c
 )
-TARGET_LINK_LIBRARIES(JPWL_j2k_to_image ${OPENJPEG_LIBRARY_NAME}_JPWL.static ${LCMS_LIB})
+TARGET_LINK_LIBRARIES(JPWL_j2k_to_image ${OPENJPEG_LIBRARY_NAME}_JPWL ${LCMS_LIB})
 IF(PNG_FOUND)
   TARGET_LINK_LIBRARIES(JPWL_j2k_to_image ${PNG_LIBRARIES})
 ENDIF(PNG_FOUND)
@@ -113,7 +89,7 @@ ADD_EXECUTABLE(JPWL_image_to_j2k
 ../codec/index.c
 ../codec/image_to_j2k.c
 )
-TARGET_LINK_LIBRARIES(JPWL_image_to_j2k ${OPENJPEG_LIBRARY_NAME}_JPWL.static ${LCMS_LIB})
+TARGET_LINK_LIBRARIES(JPWL_image_to_j2k ${OPENJPEG_LIBRARY_NAME}_JPWL ${LCMS_LIB})
 IF(PNG_FOUND)
   TARGET_LINK_LIBRARIES(JPWL_image_to_j2k ${PNG_LIBRARIES})
 ENDIF(PNG_FOUND)
